
== Version 1.0.17 5/21/2009 ==

* Fix the issue with QH crashing inside Ulduar and Naxxramas (and, in the process, fix some truly stupid decisions I made with the pathfinding. seriously, what was I thinking. can someone invent a time machine so I can go back and kick myself in the shins?)

== Version 1.0.16 5/18/2009 ==

* Fix for a series of possibly-related problems - table-too-large errors, ridiculous loading times, and excessive memory use
* Hopefully fix issue with quest items vanishing from the tracker
* Undo the possible optimization in 1.0.14 since I decided it was a bad idea
* Update translations

== Version 1.0.15 5/14/2009 ==

* Fix a very silly mistake causing QH to crash on login if the user decompressed over the old version (this does nothing useful if 1.0.14 works for you, but if it doesn't, try this out)

== Version 1.0.14 5/14/2009 ==

* Take a shot at a fix for routing in non-enUS locales
* Make the arrow and textsize configuration stick through restarts
* Reimplement the tracker color and level options
* Optimize routing a little bit

== Version 1.0.13 5/11/2009 ==

* Lucky number 13 is the official release.
* kmcguire pointed out that a bit of QH was using far more memory than I'd thought, and gave a suggestion for how to improve it. It's now a lot more efficient. Memory usage reduced by ~5mb.
* Handle one or two this-should-probably-never-happen errors more cleanly
* Possibly remove some jerkiness issues people were having

== Version 1.0.12-rc 5/6/2009 ==

* Attempt to fix the too-many-tables error in several different ways
* Let's call this a release candidate, I either need to do that or push a new version of 0.x and I really don't want to push 0.x (yep that's right, "release candidate" status is based solely on how lazy Zorba is)

== Version 1.0.11-beta 5/6/2009 ==

* Fix the obj-null-arrow error that's been plauging a lot of people